# Task1_ST

./: app.py  main.py  pyproject.toml
data/: Job description - 6 months internship (technology Hiring) (2).docx  geethika.txt  math.txt
rag_pipeline/: config.py  logger.py  models.py  pipeline1.py
rag_pipeline/embeddings/: ebedding.py
rag_pipeline/ingestion/: chunker.py  pdf_loader.py
rag_pipeline/pipeline/: generator.py
rag_pipeline/re_rankers/: re_rankers.py
rag_pipeline/storage/: vector_store.py
storage/: chunk_ids.npy  chunks.db  index.faiss  vector_store.py
store/: chunk_ids.npy  chunks.sqlite3  index.faiss
